; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_onion_client.c_check_sendback.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_onion_client.c_check_sendback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@crypto_box_PUBLICKEYBYTES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i32*, i32*, i32*)* @check_sendback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_sendback(%struct.TYPE_3__* %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @memcpy(i32* %12, i32* %17, i32 4)
  %19 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %20 = sext i32 %19 to i64
  %21 = add i64 4, %20
  %22 = add i64 %21, 4
  %23 = add i64 %22, 4
  %24 = call i8* @llvm.stacksave()
  store i8* %24, i8** %13, align 8
  %25 = alloca i32, i64 %23, align 16
  store i64 %23, i64* %14, align 8
  %26 = mul nuw i64 4, %23
  %27 = trunc i64 %26 to i32
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32, i32* %12, align 4
  %31 = call i32 @ping_array_check(i32* %25, i32 %27, i32* %29, i32 %30)
  %32 = sext i32 %31 to i64
  %33 = mul nuw i64 4, %23
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  store i32 1, i32* %15, align 4
  br label %56

36:                                               ; preds = %5
  %37 = load i32*, i32** %9, align 8
  %38 = getelementptr inbounds i32, i32* %25, i64 4
  %39 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %40 = call i32 @memcpy(i32* %37, i32* %38, i32 %39)
  %41 = load i32*, i32** %10, align 8
  %42 = getelementptr inbounds i32, i32* %25, i64 4
  %43 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %42, i64 %44
  %46 = call i32 @memcpy(i32* %41, i32* %45, i32 4)
  %47 = load i32*, i32** %11, align 8
  %48 = getelementptr inbounds i32, i32* %25, i64 4
  %49 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i32, i32* %48, i64 %50
  %52 = getelementptr inbounds i32, i32* %51, i64 4
  %53 = call i32 @memcpy(i32* %47, i32* %52, i32 4)
  %54 = call i32 @memcpy(i32* %16, i32* %25, i32 4)
  %55 = load i32, i32* %16, align 4
  store i32 %55, i32* %6, align 4
  store i32 1, i32* %15, align 4
  br label %56

56:                                               ; preds = %36, %35
  %57 = load i8*, i8** %13, align 8
  call void @llvm.stackrestore(i8* %57)
  %58 = load i32, i32* %6, align 4
  ret i32 %58
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @ping_array_check(i32*, i32, i32*, i32) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
